@@ -81,6 +81,7 @@ where: 1
 
 // Spawns you to set points in major cities.
 go: 10
+autoloot: 10
 
 
 //----------------------
