@@ -1994,7 +1994,7 @@ static int mob_delay_item_drop(int tid,unsigned int tick,int id,int data)
 			}
 		} else
 		#endif
-		if(battle_config.item_auto_get){
+		if(battle_config.item_auto_get || ditem->first_sd->autoloot){//Autoloot added by Upa-Kun
 			drop_flag = 0;
 			if((flag = pc_additem(ditem->first_sd,&temp_item,ditem->amount))){
 				clif_additem(ditem->first_sd,0,0,flag);
